--- a/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
@@ -36,10 +36,10 @@ spec:
           app:
             image:
               repository: ghcr.io/joryirving/tautulli
-              tag: v2.14.5@sha256:629062e024de78a7c7ca9758ac17f15ab95c936802c3619382b1ce331bc12375
+              tag: 2.14.5@sha256:d4001515ef956db8d39cd252d959fdcf2ce863e9f35676941064891cf64d8aa5
             env:
               TZ: ${TIMEZONE}
-            args: ["/entrypoint.sh", "--port", "80"]
+              TAUTULLI__PORT: &port 80
             probes:
               liveness: &probes
                 enabled: true
@@ -47,7 +47,7 @@ spec:
                 spec:
                   httpGet:
                     path: /status
-                    port: &port 80
+                    port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
