feat: update var

--- a/kubernetes/main/apps/media/kyoo/ks.yaml
+++ b/kubernetes/main/apps/media/kyoo/ks.yaml
@@ -23,7 +23,7 @@
 #   postBuild:
 #     substitute:
 #       APP: *app
-#       CLAIM: back-storage
+#       VOLSYNC_CLAIM: back-storage
 #       VOLSYNC_CAPACITY: 30Gi
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
