--- a/kubernetes/main/templates/volsync/r2.yaml
+++ b/kubernetes/main/templates/volsync/r2.yaml
@@ -8,7 +8,6 @@ spec:
   secretStoreRef:
     name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
   target:
     name: "${APP}-volsync-r2"
     template:
@@ -38,7 +37,7 @@ spec:
     repository: "${APP}-volsync-r2"
     volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-ceph-blockpool}"
     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-8Gi}"
-    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-ceph-block}" # was local-hostpath
+    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-ceph-block}"
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
     storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
     accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
