feat: add tf perms

--- a/kubernetes/utility/apps/flux-system/capacitor/app/rbac.yaml
+++ b/kubernetes/utility/apps/flux-system/capacitor/app/rbac.yaml
@@ -25,6 +25,7 @@ rules:
     - source.toolkit.fluxcd.io
     - kustomize.toolkit.fluxcd.io
     - helm.toolkit.fluxcd.io
+    - infra.contrib.fluxcd.io
   resources:
     - gitrepositories
     - ocirepositories
@@ -33,6 +34,7 @@ rules:
     - helmcharts
     - kustomizations
     - helmreleases
+    - terraforms
   verbs:
     - get
     - watch
