feat: update creds for cpgo

--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/externalsecret.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/externalsecret.yaml
@@ -16,8 +16,8 @@ spec:
       data:
         s3.conf: |
           [global]
-          repo1-s3-key={{ .MINIO_ACCESS_KEY }}
-          repo1-s3-key-secret={{ .MINIO_SECRET_KEY }}
+          repo1-s3-key={{ .AWS_ACCESS_KEY_ID }}
+          repo1-s3-key-secret={{ .AWS_SECRET_ACCESS_KEY }}
           repo2-s3-key={{ .R2_ACCESS_KEY_ID }}
           repo2-s3-key-secret={{ .R2_SECRET_ACCESS_KEY }}
         encryption.conf: |
@@ -29,3 +29,5 @@ spec:
         key: cloudflare
     - extract:
         key: crunchy-pgo
+    - extract:
+        key: postgresql-bucket
