--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/secret.sops.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/secret.sops.yaml
@@ -4,11 +4,11 @@ kind: Secret
 metadata:
     name: terraform-minio-secret
 stringData:
-    bw_password: ENC[AES256_GCM,data:NZo62l+oMHLh,iv:+uz2gVtg3tdLtSDOUeUvbeX+Q6cubh3KydZ/aHq+zAw=,tag:Py7PzdP4w8CMU2vFcNCZkQ==,type:str]
-    bw_client_id: ENC[AES256_GCM,data:VpoecxZXUysK5ocT0peiWp/HUyce5iVLx/UDGFhxN+k9xPJWgOWRd9M=,iv:tubgCeElJRK7KsDpEhdGGtxzjf9+CHyHC2SqW6ajWSw=,tag:rKsIvMj9Rg+SPFmgOkqXTA==,type:str]
-    bw_client_secret: ENC[AES256_GCM,data:JUlgJL6nDdOCrF2l1spBj4n3eAguizCB9yhSTaBg,iv:bYLojhl/Or6lBFs0aPdfhkIPc4Lnr5eDLxoBQLRULaA=,tag:cYrK5Nxq6ZoiCKPuaLSFww==,type:str]
-    bw_email: ENC[AES256_GCM,data:vl3aRwsTs6e6icvXIFseptniDxVpiBY=,iv:X9pdGWrQqlXNsZF73Ti84HyhaBTzG+OFRtKD21TFZ0g=,tag:Zv+spTkN4u5aB2aB1mqJnw==,type:str]
-    minio_url: ENC[AES256_GCM,data:Cz/GB8HQtxz444g=,iv:ok0B4L5KfqJop/yyGCg6Z8/Yi3R13+TGgp4Q/5d+EdU=,tag:dlymg0q55lPZ/3mEY8HiGg==,type:str]
+    bw_access_token: ENC[AES256_GCM,data:4J7q7em3vzRXUD9qSEgEH2SUKhpu/43eJTs+fHrW0jtQeFYdm8cDMweUzU0b4NMBKdxKlm5kyEDAGhl8IujXzmEpAH9XxTFl9WlREi6cBqW5tJhXwK4180WXET/irA==,iv:rvaA3HOtCiD1XtJ1bwrcQIJwtwBDNx9ZNqOH22S70vU=,tag:KRV6VOvwW9MQ2uKMcuwrdw==,type:str]
+    bw_minio_secret_id: ENC[AES256_GCM,data:ofnRALko3kOKl+S8MkDM4WbfiekixwGPBnoA3eXHdVg6lGgW,iv:75761bCQZ8nRMnl1QQPs4jma2mxxixmTHleTnRXdj2g=,tag:+FKOlYm1opITEuciYJd2JA==,type:str]
+    bw_org_id: ENC[AES256_GCM,data:uNqWpq3KeH/JESQme0jW1e3jaicDGh6uY1EaJUrx+Xhscriz,iv:mq0QxH4mANuf3ZJ0V5QRwj6vWgAK7SNKYmmbNPd9kkU=,tag:993WCD3M694DVkanNFnv+w==,type:str]
+    bw_proj_id: ENC[AES256_GCM,data:oiE/NHGTk9UHbFFRa119SV/NfbJ5xnngwCUDh3o/asniU55b,iv:vZo97Xbf9TMu460GempDeUXrMeivG7KwpduOMTzbSNo=,tag:jne6WbL6E4mFJ2g2vh8JJw==,type:str]
+    minio_url: ENC[AES256_GCM,data:AQ/2kASUhYObB8s=,iv:L3c1Q5T1LaUJsH+y0rZLkmisb4cIWxDD+XTmT69s9kA=,tag:f0Uvab3MPBC7toVYnt/cZQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +24,8 @@ sops:
             KzRDbWFsVEpsalByQ1pKL2VsbHZuaTQKKQ+Ia4b12/kVhKvypUlf/riQuTQFh9zy
             T/Lp0g6o1eW7KoE+tFk9QgPGYLphyXn/iVNWpz+bMTXhcgFL0qTQZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-01T14:46:56Z"
-    mac: ENC[AES256_GCM,data:rkRTX0QVoAqdIXzUtNHRQpOOAfDEWitxQkllv+//wbtys9iVerIlpZ5ovVaYfaJs/1aiZvn6JtA1DoW/opcQwvZZ6joyLvy1oMyhKZAVD/vW5zCW85OxTbKRzuoz7jUKTx82Go/GJMt3JMNaNkCyPeqqtWF4eRllg+yxuYA98t8=,iv:EmfRGoJ5uVyAjnLu4lvKd0MAadIeeZyZbG1v5ttCNSw=,tag:i3EYeUUPHOIiRY2XBm1I6A==,type:str]
+    lastmodified: "2024-10-09T19:36:42Z"
+    mac: ENC[AES256_GCM,data:PZkVaRSexv8Q/gsMyAnjbWXwb4OJuRQzUWZox+5q53dIQbyrAPxKIBmqiXHMaMSuPWgLAzosn3IJMPQF3HzdEmJ5VvJnAbqgqlW6rrhwI/3Y8R37coprmP6TLdBkHoU87Ck1Uugq/uS4vAdH0+ujNJIgQK+RSmMhkiDl2bg8cRw=,iv:vwqLpb/BWDq4CNdj83bkMMi0ymqYtoCBK7YSlBzNj5I=,tag:GGjzjan6TIeBSyxnpZiJ6g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
