feat: try annotations

--- a/kubernetes/main/apps/media/your-spotify/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/your-spotify/app/helmrelease.yaml
@@ -106,6 +106,10 @@ spec:
         className: external
         annotations:
           external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
+          nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+          nginx.ingress.kubernetes.io/proxy-body-size: 1000m
+          nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+          nginx.ingress.kubernetes.io/rewrite-target: /$1
         hosts:
           - host: spotty.${SECRET_DOMAIN}
             paths:
