--- a/kubernetes/utility/apps/default/it-tools/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/default/it-tools/app/helmrelease.yaml
@@ -30,8 +30,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/bjw-s-labs/it-tools
-              tag: 2024.5.13@sha256:bd39050c281a31a7402c1d73a777ccec7e56ad40b36df9f0fa2eab4adb94899d
+              repository: ghcr.io/joryirving/it-tools
+              tag: 2024.5.13@sha256:311a9845438f45317278b3e3b6849abd0d7b0cf8e6b288a9c86c8bfdc39994ab
             env:
               TZ: ${TIMEZONE}
             probes:
