feat: swap out it-tools image

--- a/kubernetes/utility/apps/default/it-tools/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/default/it-tools/app/helmrelease.yaml
@@ -30,8 +30,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/corentinth/it-tools
-              tag: 2023.12.21-5ed3693
+              repository: ghcr.io/bjw-s-labs/it-tools
+              tag: 2024.5.13@sha256:bd39050c281a31a7402c1d73a777ccec7e56ad40b36df9f0fa2eab4adb94899d
             env:
               TZ: ${TIMEZONE}
             probes:
