--- a/kubernetes/utility/bootstrap/helmfile.yaml
+++ b/kubernetes/utility/bootstrap/helmfile.yaml
@@ -1,6 +1,5 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/helmfile.json
-
+# yaml-language-server: $schema=https://json.schemastore.org/helmfile
 helmDefaults:
   wait: true
   waitForJobs: true
@@ -9,28 +8,42 @@ helmDefaults:
   force: true
 
 repositories:
-  - name: coredns
-    url: https://coredns.github.io/helm
   - name: cilium
     url: https://helm.cilium.io
+  - name: coredns
+    url: https://coredns.github.io/helm
   - name: postfinance
     url: https://postfinance.github.io/kubelet-csr-approver
 
 releases:
+  - name: prometheus-operator-crds
+    namespace: observability
+    chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
+    version: 15.0.0
   - name: cilium
     namespace: kube-system
     chart: cilium/cilium
     version: 1.16.2
-    values: ["../apps/kube-system/cilium/app/helm-values.yaml"]
+    values:
+      - ../apps/kube-system/cilium/app/helm-values.yaml
+    needs:
+      - observability/prometheus-operator-crds
   - name: coredns
     namespace: kube-system
     chart: coredns/coredns
     version: 1.36.0
-    values: ["../apps/kube-system/coredns/app/helm-values.yaml"]
-    needs: ["cilium"]
+    values:
+      - ../apps/kube-system/coredns/app/helm-values.yaml
+    needs:
+      - observability/prometheus-operator-crds
+      - kube-system/cilium
   - name: kubelet-csr-approver
     namespace: kube-system
     chart: postfinance/kubelet-csr-approver
     version: 1.2.2
-    values: ["../apps/kube-system/kubelet-csr-approver/app/helm-values.yaml"]
-    needs: ["cilium", "coredns"]
+    values:
+      - ../apps/kube-system/kubelet-csr-approver/app/helm-values.yaml
+    needs:
+      - observability/prometheus-operator-crds
+      - kube-system/cilium
+      - kube-system/coredns
