feat: change to service

--- a/kubernetes/utility/apps/default/cloudflare-ddns/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/default/cloudflare-ddns/app/externalsecret.yaml
@@ -8,14 +8,13 @@ spec:
   secretStoreRef:
     name: bitwarden-secrets-manager
     kind: ClusterSecretStore
+  refreshInterval: 15m
   target:
     name: *name
     template:
-      templateFrom:
-        - configMap:
-            name: cloudflare-ddns-configmap
-            items:
-              - key: cloudflare-ddns.sh
+      engineVersion: v2
+      data:
+        CLOUDFLARE_API_KEY: "{{ .CLOUDFLARE_API_KEY }}"
   dataFrom:
   - extract:
       key: cloudflare
