--- a/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
@@ -82,6 +82,9 @@ spec:
         className: external
         annotations:
           external-dns.alpha.kubernetes.io/target: external-utility.${SECRET_DOMAIN}
+          # websockets?
+          nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+          nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
