chore: add policy json

--- a/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
@@ -105,8 +105,8 @@ spec:
             app:
               - path: /etc/headscale/config.yaml
                 subPath: config.yaml
-      #         - path: /etc/headscale/policy.json
-      #           subPath: policy.json
+              - path: /etc/headscale/policy.json
+                subPath: policy.json
       var-lib-headscale:
         existingClaim: headscale
         advancedMounts:
