--- a/kubernetes/utility/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/utility/bootstrap/talos/talconfig.yaml
@@ -21,8 +21,8 @@ cniConfig:
 nodes:
   - hostname: "celestia"
     ipAddress: "10.69.1.121"
-    installDisk: /dev/sda2dcd442954d67662d41c61bdb92165aaf7189aff9997bd011b6968c12ce8d9c0
-    talosImageURL: factory.talos.dev/installer/
+    installDisk: /dev/sda
+    talosImageURL: factory.talos.dev/installer/2dcd442954d67662d41c61bdb92165aaf7189aff9997bd011b6968c12ce8d9c0
     controlPlane: true
     networkInterfaces:
       - deviceSelector:
