--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -121,6 +121,9 @@ spec:
         repo2-retention-full: "7" # days
         repo2-retention-full-type: time
         repo2-s3-uri-style: path
+        # PVC
+        repo3-retention-full: "30" # days
+        repo3-retention-full-type: "time"
       manual:
         repoName: repo1
         options:
@@ -146,6 +149,17 @@ spec:
           schedules:
             full: "30 2 * * 0" # Sunday at 02:30
             incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
+        - name: repo3
+          volume:
+            volumeClaimSpec:
+              accessModes: ["ReadWriteMany"]
+              resources:
+                requests:
+                  storage: 1Mi
+          schedules:
+            full: "30 1 * * 0" # Sunday at 01:30
+            differential: "30 1 * * 1-6" # Mon-Sat at 01:30
+            incremental: "30 3-23 * * *" # Every hour except 01:30-2:30
   dataSource:
     pgbackrest:
       stanza: db
