--- a/kubernetes/main/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/main/flux/vars/cluster-secrets.sops.yaml
@@ -21,7 +21,8 @@ stringData:
     SECONDARY_DOMAIN: ENC[AES256_GCM,data:Azn6MDI8Np2VZDR7RQxjnQ3Msg==,iv:H2v9g/wSAZJB7/6RG4yfLZwB7QSVoG27sQVAuCiSmXs=,tag:KT6IyBzhJJ2oLZLW3pDXxw==,type:str]
     SECRET_NFS_DATA: ENC[AES256_GCM,data:RN+iTilzovBvmzeKmn8=,iv:9HOHKMlvI1tPJ0akJGHMYqrmhBWpHCthyhJEXuK/olk=,tag:NN30dHlw4WQVqulXe0/TUg==,type:str]
     SECRET_NFS_PAPERLESS: ENC[AES256_GCM,data:IjrRY8AXUBwvNUwl+2VK,iv:nlhXrqMAJ7Valrz8gheC7ZcznJTfNrnHS4uy75z/IC0=,tag:n0y2C1V9YpMNoHlcKNFuqQ==,type:str]
-    SECRET_NFS_POSTGRES: ENC[AES256_GCM,data:WFy6mv7/bdAWgZQHSVdWeUWeCur7hJTRxg==,iv:wX8PrjuIWRQ+7ueXTbNwz4gRwHwbnURwWtNkVZfMDko=,tag:ymjKd/yhBcr+Hshq9msVDQ==,type:str]
+    SECRET_NFS_VOLSYNC: ENC[AES256_GCM,data:70s24/HdVnkvSrWHO2ofAstaDnaYbU/XCMssdg==,iv:4VoWUxB0m3PkR/hqmSzC2ThBOBZ/ECXu5ZbrmeO1jGI=,tag:/DZ4CFioDujyCuwsv1YSTg==,type:str]
+    SECRET_NFS_POSTGRES: ENC[AES256_GCM,data:R35ymWjSAis2bvyU7aGN2K7xn5o9gMkD79vowWc=,iv:9ZQbMkqiklGYrk5pqkUiAKHuKCS28JgWynPBqFx1zbE=,tag:oicthoWKNN+mRo6H7VD6QA==,type:str]
     NAS_IP: ENC[AES256_GCM,data:T4L6Vz+TXi5nR2s=,iv:wXEHLHXWbN5cwXaAULpiTGxZgedZcgQ5rOZR/HMo84Y=,tag:TySPbqenLzRv39Ee11hh3w==,type:str]
     SVC_NUT_ADDR: ENC[AES256_GCM,data:wQejmnD1yHg9NTg=,iv:bRLR2FzSq6okzy+RaHtPjE4a2g6dYVwxcWPgO9FrhMA=,tag:a3N2mkNaIoe+kzphD8LeYA==,type:str]
     UNIFI_CONTROLLER_IP: ENC[AES256_GCM,data:mUqu2fOVg3LRTnM=,iv:RjjMuYZbMqxbkcTb9upDEzCG5P4A1iEj/cUaT68CTBY=,tag:SorUStnliZBvzIFkk/n/Og==,type:str]
@@ -42,8 +43,8 @@ sops:
             Mml3TDJwa2tWTUV3d0piVTFJSFhhOEEKr0FLybpRsnIlbT55No+/qolp2GVAB1yD
             yeGYjULaarqScUazhWSnuzDcRj4X0MX8UDV5lc4OsGba9ymVbywDbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-06T03:15:00Z"
-    mac: ENC[AES256_GCM,data:Yf6XKs9orKUVaHeQCsLgEWJCjubbEcpy4vU3Djbk2VK99sDHbegptytBb96r02727sYxyQHFnGbDDLCOdb2mgN6CU+mQW14khihHqXMiRnpxec53g2x4r97Vbp41mqP1nXG/lP+tZYjSsbZ5F8f0EW59nI+hDP8AEaB+hikYP8I=,iv:X1fWaoCWw1Z6yfbOQqRyydgOKUhdZZuH2k5dUItkH7o=,tag:vtpxnnhKOZshyI6VMgJ3Ig==,type:str]
+    lastmodified: "2024-10-22T17:24:35Z"
+    mac: ENC[AES256_GCM,data:sHK5XMpYfdsbDBKfXCCEokoEbDH8FUS5edp27F6a26+I2UYHVubN8GLk6kdGOfu/mrxwLeNYMpTaVBG7knwU0D07+LvqlTHIZkTypBKlEvXsRtjZKwjmTz435ivVw5b/BJ+Qa1cOy/+DJo/TKozGq+XtHM6dy0TK1dIZn6ZWn4g=,iv:e9vVk13lWLhnOEFSETYMD0gJSKBbgUWXCIBwXy4rbrw=,tag:ZwW3/lL7/zyRtS4jitzdCg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+    version: 3.9.1
