chore: test a custom nfs name

--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -152,6 +152,8 @@ spec:
         - name: repo3
           volume:
             volumeClaimSpec:
+              storageClassName: ""
+              volumeName: "postgres-nfs"
               accessModes: ["ReadWriteMany"]
               resources:
                 requests:
