chore: I like to move it move it

--- a/kubernetes/main/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/main/apps/self-hosted/kustomization.yaml
@@ -6,3 +6,10 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
+  - ./actual/ks.yaml
+  - ./atuin/ks.yaml
+  - ./changedetection/ks.yaml
+  - ./homepage/ks.yaml
+  - ./lubelog/ks.yaml
+  - ./paperless/ks.yaml
+  - ./redlib/ks.yaml
