--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -6,3 +6,8 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
+  - ./free-game-notifier/ks.yaml
+  - ./it-tools/ks.yaml
+  - ./meshcentral/ks.yaml
+  - ./rss-forwarder/ks.yaml
+  - ./thelounge/ks.yaml
