--- a/kubernetes/utility/apps/network/kustomization.yaml
+++ b/kubernetes/utility/apps/network/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./blocky/ks.yaml
+  - ./cloudflare-ddns/ks.yaml
   - ./cloudflared/ks.yaml
   - ./echo-server/ks.yaml
   - ./external-dns/ks.yaml
