--- a/kubernetes/utility/apps/self-hosted/meshcentral/app/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/meshcentral/app/kustomization.yaml
@@ -3,6 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
+  - ./helmrelease.yaml
+  - ../../../../templates/volsync
+  - ../../../../templates/gatus/guarded
