--- a/kubernetes/utility/apps/self-hosted/meshcentral/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/meshcentral/app/helmrelease.yaml
@@ -69,6 +69,7 @@ spec:
       app:
         className: internal
         annotations:
+          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
           external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
         hosts:
           - host: *host
@@ -81,8 +82,8 @@ spec:
         type: configMap
         name: meshcentral-config
         advancedMounts:
-          *app :
-            *app :
+          meshcentral:
+            app:
               - path: /opt/meshcentral/meshcentral-data/config.json
                 subPath: config.json
       data:
