fix(volsync): set defaults on VOLSYNC_CAPACITY and increase cache pvc size

--- a/kubernetes/main/templates/volsync/claim.yaml
+++ b/kubernetes/main/templates/volsync/claim.yaml
@@ -13,5 +13,5 @@ spec:
     name: "${APP}-bootstrap"
   resources:
     requests:
-      storage: "${VOLSYNC_CAPACITY}"
+      storage: "${VOLSYNC_CAPACITY:-2Gi}"
   storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
