fix(volsync): prep for NFS

--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -2,8 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-# Pre Flux-Kustomizations
-- ./namespace.yaml
-# Flux-Kustomizations
-- ./minecraft/ks.yaml
-- ./palworld/ks.yaml
+  # Pre Flux-Kustomizations
+  - ./namespace.yaml
+  # NFS
+  # - ../../templates/nfs
+  # Flux-Kustomizations
+  - ./minecraft/ks.yaml
+  - ./palworld/ks.yaml
