--- a/kubernetes/utility/apps/network/kustomization.yaml
+++ b/kubernetes/utility/apps/network/kustomization.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  # NFS
+  # - ../../templates/nfs
   # Flux-Kustomizations
   - ./blocky/ks.yaml
   - ./cloudflare-ddns/ks.yaml
