--- a/kubernetes/main/apps/downloads/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/kustomization.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  # NFS
+  # - ../../templates/nfs
   # Flux-Kustomizations
   - ./bazarr/ks.yaml
   - ./flaresolverr/ks.yaml
