--- a/kubernetes/main/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/main/apps/self-hosted/kustomization.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  # NFS
+  # - ../../templates/nfs
   # Flux-Kustomizations
   - ./actual/ks.yaml
   - ./atuin/ks.yaml
