--- a/kubernetes/utility/apps/home-automation/kustomization.yaml
+++ b/kubernetes/utility/apps/home-automation/kustomization.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  # NFS
+  # - ../../templates/nfs
   # Flux-Kustomizations
   - ./home-assistant/ks.yaml
   - ./mosquitto/ks.yaml
