--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -5,6 +5,8 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  # NFS
+  # - ../../templates/nfs
   # Flux-Kustomizations
   - ./free-game-notifier/ks.yaml
   - ./it-tools/ks.yaml
