fix: revert to experimental for now

--- a/kubernetes/utility/apps/observability/gatus/app/config/config.yaml
+++ b/kubernetes/utility/apps/observability/gatus/app/config/config.yaml
@@ -12,113 +12,58 @@ connectivity:
     target: 1.1.1.1:53
     interval: 1m
 endpoints:
-  # - name: Unifi Dream Machine
-  #   group: ICMP
-  #   url: icmp://192.168.1.1
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: Kubernetes Node 1 (Ayaka)
-  #   group: ICMP
-  #   url: icmp://10.69.1.21
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: Kubernetes Node 2 (Eula)
-  #   group: ICMP
-  #   url: icmp://10.69.1.22
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: Kubernetes Node 3 (Ganyu)
-  #   group: ICMP
-  #   url: icmp://10.69.1.23
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: Kubernetes Node 4 (Hu Tao)
-  #   group: ICMP
-  #   url: icmp://10.69.1.24
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: Kubernetes Node 5 (Navia)
-  #   group: ICMP
-  #   url: icmp://10.69.1.25
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: Kubernetes Node 6 (Yelan)
-  #   group: ICMP
-  #   url: icmp://10.69.1.26
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: Kubernetes Utility Node 0 (Celestia)
-  #   group: ICMP
-  #   url: icmp://10.69.1.121
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: TESmart KVM
-  #   group: ICMP
-  #   url: icmp://192.168.1.10
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: NAS
-  #   group: ICMP
-  #   url: icmp://10.69.1.100
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
-  # - name: PiKVM
-  #   group: ICMP
-  #   url: icmp://192.168.1.11
-  #   conditions: ["[CONNECTED] == true"]
-  #   alerts: [{ type: discord }]
   - name: Unifi Dream Machine
     group: ICMP
-    url: tcp://192.168.1.1
+    url: icmp://192.168.1.1
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: Kubernetes Node 1 (Ayaka)
     group: ICMP
-    url: tcp://10.69.1.21
+    url: icmp://10.69.1.21
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: Kubernetes Node 2 (Eula)
     group: ICMP
-    url: tcp://10.69.1.22
+    url: icmp://10.69.1.22
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: Kubernetes Node 3 (Ganyu)
     group: ICMP
-    url: tcp://10.69.1.23
+    url: icmp://10.69.1.23
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: Kubernetes Node 4 (Hu Tao)
     group: ICMP
-    url: tcp://10.69.1.24
+    url: icmp://10.69.1.24
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: Kubernetes Node 5 (Navia)
     group: ICMP
-    url: tcp://10.69.1.25
+    url: icmp://10.69.1.25
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: Kubernetes Node 6 (Yelan)
     group: ICMP
-    url: tcp://10.69.1.26
+    url: icmp://10.69.1.26
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: Kubernetes Utility Node 0 (Celestia)
     group: ICMP
-    url: tcp://10.69.1.121
+    url: icmp://10.69.1.121
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: TESmart KVM
     group: ICMP
-    url: tcp://192.168.1.10
+    url: icmp://192.168.1.10
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: NAS
     group: ICMP
-    url: tcp://10.69.1.100
+    url: icmp://10.69.1.100
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
   - name: PiKVM
     group: ICMP
-    url: tcp://192.168.1.11
+    url: icmp://192.168.1.11
     conditions: ["[CONNECTED] == true"]
     alerts: [{ type: discord }]
