feat: core-keeper

--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   # NFS
   # - ../../templates/nfs
   # Flux-Kustomizations
+  - ./core-keeper/ks.yaml
   - ./minecraft/ks.yaml
   - ./palworld/ks.yaml
