--- a/kubernetes/main/apps/games/core-keeper/app/helmrelease.yaml
+++ b/kubernetes/main/apps/games/core-keeper/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app palworld
+  name: &app core-keeper
 spec:
   interval: 30m
   chart:
@@ -28,7 +28,7 @@ spec:
     namespace: storage
   values:
     controllers:
-      palworld:
+      core-keeper:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
