--- a/kubernetes/main/apps/games/core-keeper/app/dnsendpoint.yaml
+++ b/kubernetes/main/apps/games/core-keeper/app/dnsendpoint.yaml
@@ -6,7 +6,7 @@ metadata:
   name: core-keeper
 spec:
   endpoints:
-    - dnsName: "core.${SECRET_DOMAIN}"
+    - dnsName: "core-keeper.${SECRET_DOMAIN}"
       recordType: CNAME
       targets: ["ipv4.${SECRET_DOMAIN}"]
       providerSpecific:
