--- a/kubernetes/main/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/main/flux/vars/cluster-secrets.sops.yaml
@@ -17,6 +17,7 @@ stringData:
     SVC_TAKOCRAFT_ADDR: ENC[AES256_GCM,data:FO629jc3FznVFQ==,iv:ggVburenvA0IOfOWr+RmGWUDntL369P4BjFMkJWEY8Y=,tag:MiX1TyqS1fahbZe93ETGwg==,type:str]
     SVC_PALWORLD_ADDR: ENC[AES256_GCM,data:sN51CLk0J5lueA==,iv:h/WiPB2ByiOjLLJwSegF0SXKklZazd81e0Qn//G8Wbk=,tag:Isi9IegNRCGbZ+nJfgC6Fw==,type:str]
     SVC_MINECRAFT_ADDR: ENC[AES256_GCM,data:f12BWnkvCdvjNg==,iv:gHfGEfHHQY9Rbu0uDls0sLdkje7UIQ4Mp+l5n33BJBA=,tag:NUo6kfMNYZQY9gRqZZN36g==,type:str]
+    SVC_COREKEEPER_ADDR: ENC[AES256_GCM,data:fA4djsP75bTYlA==,iv:Kipkmlx+4AEkjmSjCdLKxSRRViAp0AP8SYgcyQImC0s=,tag:o7yurCyzgSHSnGmCHqZmAg==,type:str]
     #ENC[AES256_GCM,data:NYqIEJwguAGYzknS,iv:U0oZbqHMObZ+Wvx8ryQE8dlR0SG26wsfYV3F2F67H+w=,tag:oCJYngN4jrdWrQug82W9vQ==,type:comment]
     SECONDARY_DOMAIN: ENC[AES256_GCM,data:Azn6MDI8Np2VZDR7RQxjnQ3Msg==,iv:H2v9g/wSAZJB7/6RG4yfLZwB7QSVoG27sQVAuCiSmXs=,tag:KT6IyBzhJJ2oLZLW3pDXxw==,type:str]
     SECRET_NFS_DATA: ENC[AES256_GCM,data:RN+iTilzovBvmzeKmn8=,iv:9HOHKMlvI1tPJ0akJGHMYqrmhBWpHCthyhJEXuK/olk=,tag:NN30dHlw4WQVqulXe0/TUg==,type:str]
@@ -43,8 +44,8 @@ sops:
             Mml3TDJwa2tWTUV3d0piVTFJSFhhOEEKr0FLybpRsnIlbT55No+/qolp2GVAB1yD
             yeGYjULaarqScUazhWSnuzDcRj4X0MX8UDV5lc4OsGba9ymVbywDbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T17:24:35Z"
-    mac: ENC[AES256_GCM,data:sHK5XMpYfdsbDBKfXCCEokoEbDH8FUS5edp27F6a26+I2UYHVubN8GLk6kdGOfu/mrxwLeNYMpTaVBG7knwU0D07+LvqlTHIZkTypBKlEvXsRtjZKwjmTz435ivVw5b/BJ+Qa1cOy/+DJo/TKozGq+XtHM6dy0TK1dIZn6ZWn4g=,iv:e9vVk13lWLhnOEFSETYMD0gJSKBbgUWXCIBwXy4rbrw=,tag:ZwW3/lL7/zyRtS4jitzdCg==,type:str]
+    lastmodified: "2024-10-28T02:13:05Z"
+    mac: ENC[AES256_GCM,data:paE1eJvsdmFjMq/Hj+Z7g/q7coCeSxIDIFh4ZNLqXz1gi5VhNU2DDCQaTMfmfrcrI2ItxpEhyMbB1fvWsN3KU4gj5TMDKrK7p/LoDzMSBV1UxI8eQC2boaBzPfVowzq/t3yb4EsZIqAx+X5wvKNWT01vwGdgPlQ5s4Y58ASKEdw=,iv:0Lp6AN6T3b3oDdsPKWi71vLiomnJgEp/0WhV9FHCPvw=,tag:i7bcZiARpu0f1Lz9NGZfBQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
