--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -150,7 +150,7 @@ spec:
             full: "30 2 * * 0" # Sunday at 02:30
             incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
         - name: repo3
-          volume:
+          volume: &nfs
             volumeClaimSpec:
               storageClassName: ""
               volumeName: "postgres-nfs"
